--- a/index.html
+++ b/index.html
@@ -1,1 +1,280 @@
-<h1>Sana Building - And - Brick Works </h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="css/animate.compat.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script defer src="js/scripts.js"></script>
+    <title>Sana Building and Brickwork</title>
+</head>
+
+<body>
+    <section id="sec-0">
+        <header class="top">
+            <div class="container">
+                <p>9715022059</p>
+                <p>info@sanabuildingandbrickwork.com</p>
+                <p>Mon-Sat 9:00-19:00</p>
+                <div class="social">
+                    <a href="#" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#" title="Twitter"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#" title="Behance"><i class="fa-brands fa-behance"></i></a>
+                    <a href="#" title="Basketball"><i class="fa-solid fa-basketball"></i></a>
+                    <a href="#" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#" title="YouTube"><img src="Images/youtube-logotype.png" alt="YouTube Logo"></a>
+                </div>
+            </div>
+        </header>
+        <header>
+            <div class="hide" id="searchBar">
+                <input type="search" name="searchBox" id="searchBox" placeholder="Type your search here..    Press [Esc] to exist">
+            </div>
+            <div class="container">  
+                <h1> 
+                    <span>Sana Building</span> and Brickwork 
+                    <p>Building Dreams, Brick by Brick.</p>
+                </h1>
+                <label for="menu"><i class="fas fa-bars"></i></label>
+                <input type="checkbox" id="menu">
+                <nav>
+                    <a href="#">Home</a>
+                    <a href="#">Page</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Portofolio</a>
+                    <a href="#">Components</a>
+                    <a href="#">Contact</a>
+                    <i class="fa-solid fa-magnifying-glass" id="search"></i>
+                </nav>
+            </div>
+        </header>
+        <article>
+        <div class="container">
+            <h1> We are Certified Engineers</h1>
+            <h2>Construction services<br>
+            <span>Creative AND professional</span></h2>
+            <p>Welcome to Sana Building and Brickwork, your trusted partner in quality construction services in Coimbatore, Tamil Nadu. We specialize in innovative building solutions tailored to meet your needs.</p>
+            <a href="#">Show More</a>
+            <a href="#">view project</a>
+        </div>
+        </article>
+    </section>
+    <section id="sec-1">
+        <div class="container">
+            <article>
+                <h1>Welcome to our company</h1>
+                <h2>Let us know how we can bring your vision to life!</h2>
+                <p>Welcome to Sana Building and Brickwork, where quality craftsmanship meets exceptional service! Based in the vibrant city of Coimbatore, Tamil Nadu, we are proud to be a trusted name in the construction and brickwork industry. <br><br>At Sana Building and Brickwork, we specialize in delivering top-notch solutions for residential, commercial, and industrial projects. From designing and building stunning homes to creating durable industrial spaces, we turn your dreams into reality, brick by brick.</p>
+                <a href="#">Show More</a>
+            </article>
+            <aside><img src="Images/img1.png" alt="man"></aside>
+        </div>
+    </section>
+    <section id="sec-2">
+        <div class="container">
+            <h1> why choose us?</h1>
+            <P>Whether you need a reliable partner for a large-scale construction project or custom brickwork that stands out, we’re here to help you build a better future.</P>
+            <article>
+                <figure>
+                    <div><img src="Images/ico1.png" alt=""></div>
+                    <div class="cont">
+                        <h2>we deliver quality</h2>
+                        <p>Our team of skilled professionals ensures every project meets the highest standards of quality.</p>
+                    </div>
+                </figure>
+                <figure>
+                    <div><img src="Images/ico2.png" alt=""></div>
+                    <div class="cont">
+                        <h2>Always on time</h2>
+                        <p>Your time is valuable to us, and we strive to complete every project on schedule.</p>
+                    </div>
+                </figure>
+                <figure>
+                    <div><img src="Images/ico3.png" alt=""></div>
+                    <div class="cont">
+                        <h2>we are passionate</h2>
+                        <p>We combine traditional techniques with modern technologies to deliver the best results.</p>
+                    </div>
+                </figure>
+                <figure>
+                    <div><img src="Images/ico4.png" alt=""></div>
+                    <div class="cont">
+                        <h2>proffesional services</h2>
+                        <p> We prioritize your needs, working closely with you at every step to ensure complete satisfaction.</p>
+                    </div>
+                </figure>
+            </article>
+        </div>
+    </section>
+    <section id="sec-3">
+        <div class="container">
+            <h1>our services</h1>
+            <div class="cont">
+                <div class="card border-0">
+                    <div>
+                        <img src="Images/card1.jpg" class="card-img-top" alt="...">
+                        <h5 class="caption">Construction Management</h5>
+                    </div>
+                    <div class="card-body px-0 pt-4">
+                        <p>At <strong>Sana Building and Brickwork</strong>, our Construction Management services are tailored to ensure every project is delivered with precision, quality, and efficiency. From initial planning to final handover, we manage all aspects of the construction process, including scheduling, budgeting, and on-site supervision. Our goal is to streamline operations, mitigate risks, and maintain the highest standards of safety and craftsmanship. Whether it’s a residential, commercial, or industrial project, our experienced team ensures seamless execution, turning your vision into a reality on time and within budget.</p>
+                        
+                        
+                    <a href="#">Show More</a>
+                    </div>
+                </div>
+                <div class="card border-0">
+                    <div>
+                        <img src="Images/card2.jpg" class="card-img-top" alt="...">
+                        <h5 class="caption">Renovation</h5>
+                    </div>
+                    <div class="card-body px-0 pt-4">
+                        <p>Transform your spaces with expert renovation services from <strong>Sana Building and Brickwork</strong>. Whether it’s a complete home makeover, office remodeling, or restoring an aged structure to its former glory, we bring innovation and precision to every project. Our team specializes in blending modern designs with functionality, ensuring your renovated spaces not only look stunning but also meet your unique needs. From concept to completion, we handle every detail with care, delivering results that exceed expectations. Let us breathe new life into your property and create spaces that inspire!</p>
+                    <a href="#">Show More</a>
+                    </div>
+                </div>
+                <div class="card border-0">
+                    <div>
+                        <img src="Images/card3.jpg" class="card-img-top" alt="...">
+                        <h5 class="caption">Architectuure</h5>
+                    </div>
+                    <div class="card-body px-0 pt-4">
+                        <p>At <strong>Sana Building and Brickwork</strong>, we believe architecture is an art that shapes how we live, work, and connect. Our architectural services focus on creating innovative designs that harmonize aesthetics, functionality, and sustainability. Whether it’s designing a dream home, a modern office, or an iconic commercial space, we turn your vision into reality with meticulous planning and creative expertise. Let us craft structures that are not just buildings but timeless masterpieces tailored to your needs and lifestyle.</p>
+                    <a href="#">Show More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="sec-4">
+        <div class="container">
+            <h1>made with love</h1>
+            <p>At Sana Building and Brickwork, we pour passion and care into every project, ensuring quality and excellence in every brick we lay.</p>
+            <div class="filter">
+                <a href="#">Show all</a>
+                <a href="#">buildings</a>
+                <a href="#">interior design</a>
+                <a href="#">isolation</a>
+                <a href="#">plumping</a>
+            </div>
+            <div class="cont">
+                <img class="wow animated fadeIn slow" src="Images/gallery1.jpg" alt="pic">
+                <aside>
+                    <img src="Images/gallery3.jpg" alt="pic" class="wow animated flipInX delay-1s">
+                    <img src="Images/gallery2.jpg" alt="pic" class="wow animated flipInX delay-1s slower">
+                    <img src="Images/gallery4.jpg" alt="pic" class="wow animated flipInX delay-2s">
+                    <img src="Images/gallery5.jpg" alt="pic" class="wow animated flipInX delay-2s slower">
+                </aside>    
+            </div>
+        </div>
+    </section>
+    <section id="sec-5">
+        <div class="container">
+            <h1>customer reviews</h1>
+            <p>Our clients' satisfaction is our top priority. Here’s what they have to say about working with us:</p>
+
+            <div class="cont">
+                <article class="quoteblock">
+                    <div class="quotetxt arrow">
+                        <p><img src="Images/blockquote2.png" alt="quote mark"></p>
+                        <p>"Sana Building and Brickwork turned our dream home into a reality. Their team was professional, efficient, and dedicated. The attention to detail was exceptional, and we couldn’t be happier with the final result!"</p>
+                    </div>
+                    <figure>
+                        <img class="customer" src="Images/cust1.png" alt="customer1">
+                        <figcaption>John D</figcaption>
+                    </figure>
+                </article>
+                <article class="quoteblock">
+                    <div class="quotetxt arrow">
+                        <p><img src="Images/blockquote1.png" alt="quote mark"></p>
+                        <p>"The renovation of our office space was seamless, thanks to the expert management of Sana Building and Brickwork. They completed the project on time and within budget, delivering exactly what we envisioned. Highly recommend!"</p>
+                    </div>
+                    <figure>
+                        <img class="customer" src="Images/cust1.png" alt="customer1">
+                        <figcaption>Priya S</figcaption>
+                    </figure>
+                </article>
+                <article class="quoteblock">
+                    <div class="quotetxt arrow">
+                        <p><img src="Images/blockquote2.png" alt="quote mark"></p>
+                        <p>"Working with Sana Building and Brickwork was a pleasure. Their team ensured that our industrial project was completed safely, efficiently, and to the highest standard. They truly care about their clients and the work they do."</p>
+                    </div>
+                    <figure>
+                        <img class="customer" src="Images/cust1.png" alt="customer1">
+                        <figcaption>Ravi K</figcaption>
+                    </figure>
+                </article>
+            </div>
+        </div>
+        <div class="contactUs">
+            <div class="container">
+                <aside>
+                    <h1>do you have any questions?</h1>
+                    <h2>feel free to contact us!</h2>
+                </aside>
+                <form id="form" action="/" method="">
+                    <input type="text" name="name" id="" placeholder="Name" required>
+                    <input type="email" name="email" id="email" placeholder="Email" required>
+                    <input type="text" name="message" id="" placeholder="Message" required>
+                    <input type="submit" value="submit" id="submit">
+                    <p id="msg"></p>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section id="sec-6">
+        <div class="container">
+            <div class="about">
+                <h1>About Company</h1>
+                <h2>
+                    CONSTRUCTION 
+                    <p>Lorem ipsum dolor sit amit.</p>
+                </h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus eius nisi repudiandae ipsam pariatur, quos perspiciatis eaque officia rerum odio modi sed fugiat mollitia? Rerum, architecto obcaecati!</p>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>  
+                <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                <a href="#"><i class="fab fa-youtube-square"></i></a>
+            </div>
+            <div class="links">
+                <h1>Explor links</h1>
+                <a href="#">Our services</a>
+                <a href="#">Meet our team</a>
+                <a href="#">Forum</a>
+                <a href="#">Help center</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Our terms</a>
+                <a href="#">Site map</a>
+            </div>
+            <div class="posts">
+                <h1>Latest posts</h1>
+                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
+                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
+                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
+                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
+                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
+            </div>
+            <div class="contact">
+                <h1>Contact us</h1>
+                <p>Ashik Rahman </p>
+                <p>info@sanabuildingandbrickwork.com</p>
+                <p>9715022059</p>
+
+            </div>
+        </div>
+    </section>
+    <section id="sec-7">
+        <div class="container">
+            <p>Copyright @2024 | Designed by <span>Hussanar Abdul Hakkeem</span></p>
+        </div>
+    </section>
+
+    <script src="js/wow.min.js"></script>
+    <script> new WOW().init();</script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
