--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
                 <h1>About Company</h1>
                 <h2>
                     CONSTRUCTION 
-                    <p>Lorem ipsum dolor sit amit.</p>
+                    <p>Building Dreams, Brick by Brick.</p>
                 </h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus eius nisi repudiandae ipsam pariatur, quos perspiciatis eaque officia rerum odio modi sed fugiat mollitia? Rerum, architecto obcaecati!</p>
+                <p>At Sana Building and Brickwork, we specialize in providing top-notch construction services that meet both residential and commercial needs. Our team is committed to delivering exceptional quality, durability, and innovative solutions in every project we take on.</p>
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>  
@@ -252,11 +252,11 @@
             </div>
             <div class="posts">
                 <h1>Latest posts</h1>
-                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
-                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
-                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
-                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
-                <a href="#"><span>20<br>AUG</span>Lorem ipsum dolor sit stiae tempora</a>
+                <a href="#"><span>10<br>AUG</span>Building Your Dream Home: Tips from the Experts</a>
+                <a href="#"><span>12<br>MAR</span>Sustainable Building Practices: Why They Matter</a>
+                <a href="#"><span>15<br>JAN</span>The Importance of Timely Project Management</a>
+                <a href="#"><span>14<br>OCT</span>How to Choose the Right Materials for Your Building Project</a>
+                <a href="#"><span>19<br>APR</span>Client Success Story: From Concept to Completion</a>
             </div>
             <div class="contact">
                 <h1>Contact us</h1>
