--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
                     <h1>do you have any questions?</h1>
                     <h2>feel free to contact us!</h2>
                 </aside>
-                <form id="form" action="/" method="">
+                <form id="form" action="https://formspree.io/f/mzzzbpbk"
+                method="POST" >
                     <input type="text" name="name" id="" placeholder="Name" required>
                     <input type="email" name="email" id="email" placeholder="Email" required>
                     <input type="text" name="message" id="" placeholder="Message" required>
